# razerz_backup

./: CmakeLists.txt  exmeltz_.hpp  gitup.sh  pomz_in_hpp.hpp  readME.md
build_stuff/: configure.ac
lib_othr/: CMakeLists1.cmake  cmake_other_cmdz.txt  spare_gematz.cpp  test_obj_parser.cpp
lib_othr/shaderglsl/base_D/: tess_eval_shaderD01.glsl
lib_othr/shaderglsl/exmplz/: fracz_2_frag_3.glsl  frag_04_frac_3.glsl  glsl_cmdz.glsl  vertex_shader_02.glsl
lib_othr/skybox_exmp/: 6.2.skybox.vs
lib_othr/tool_chain_imgz/image_loader/: a.out
lib_othr/tool_chain_imgz/image_loader/output/: tezjkzkzkzkkk_outim.ppm
lib_othr/tool_chain_imgz/include3rdparty/: vdds.cpp  vgl.h
oldcode_backupz/backup_dec12/: geometry.cpp  geometry.hpp  main_shpr2_test.cpp  main_shpr3_test.cpp  model_parser.hpp  opengl_utilityz.hpp  pre_comb_objz.hpp  readME.md  render_objk_cmd.hpp  scene.hpp  scene_CMDer.hpp  shader_parser.hpp
oldcode_backupz/bacup_nov27/: a.out  geometry.cpp  geometry_parser.hpp  gl_lib_z.cpp  gl_lib_z.hpp  pre_comb_objz.hpp  render_objk_cmd.hpp  shader_parser.hpp  spare_gematz.cpp  with_keymove.out
oldcode_backupz/bacup_nov27/verson_ctl_backupz/: main_shpr_test.cpp  tes_main_02.cpp  tes_main_03.cpp
razerz-master0.025/source/MCP_cmd/: arrangments.cpp  arrangments.hpp  mcp_lib.hpp  écouterions_resourcer_CMD.hpp
razerz-master0.025/source/basez/: lenz.hpp  rez_utility_lib.hpp  shader_lib.hpp
razerz-master0.025/source/shaderzglsl/: file_list_shader.xml
razerz-master0.025/source/ttestz/: a.out  build_readme.md  log_sym_obj.txt  sysm_test.cpp
razerz_v0.00.1/: gitup.sh
razerz_v0.00.1/lib_othr/: old_shader_code.hpp  raz_lib_01.h  render_objk.cpp  render_objk.hpp  test_obj_parser.cpp  vkaolzlna
razerz_v0.00.1/lib_othr/build_stuff/: Makefile.am
razerz_v0.00.1/lib_othr/shaderglsl/base_D/: frag_shader_baseD01.glsl  geom_shader_baseD01.glsl
razerz_v0.00.1/lib_othr/shaderglsl/exmplz/: expmazl.glsl  fragment_shader_01.glsl  vertex_shader_01.glsl
razerz_v0.00.1/lib_othr/skybox_exmp/: shader.hpp
razerz_v0.00.1/lib_othr/tool_chain_imgz/image_loader/: RGB_pix_intzity.h  image_loder_main_test.cpp  imagkjz_RGB.cpp  imagkjz_RGB.h  pixel_feture_xy_RGB.cpp
razerz_v0.00.1/source/: readME.md
razerz_v0.00.1/source/MCP_cmd/: feedback_sym_CMD.hpp  shader_pipeline_CMD.cpp  shader_pipeline_CMD.hpp  viewport_CMDerz.hpp
razerz_v0.00.1/source/basez/: CMakeLists.txt  shader_lib.hpp  texture.cpp  texture.hpp
razerz_v0.00.1/source/basez/parserz/: geometry_parser.hpp  parse_table_ref.h  parserlib.cpp  texture_parser.cpp  texture_parser.hpp
razerz_v0.00.1/source/data_extrn/: DEFUL_file_list_texture.xml
razerz_v0.00.1/source/gen_tools/: levelBuilder.hpp
razerz_v0.00.1/source/modualz/g_animation/: main_animation_test.cpp
razerz_v0.00.1/source/modualz/geometry/: geometry.hpp
razerz_v0.00.1/source/modualz/milieu/: a.out  partical_lib.hpp
razerz_v0.00.1/source/shaderglsl/: file_list_shader.xml
razerz_v0.00.1/source/shaderglsl/geometry_shaders/: geo_4multiview_tri_INOUT_A.glsl
razerz_v0.00.1/source/ttests/ship_testz/: main_shpr2_test.cpp  pre_comb_objz.hpp
razerz_v0.00.1/test_rezultz_et_backupz/binary_backupz/: a.out  a32.out  singltrlz_01a.out  textoutdest.out
razerz_v0.00.1/test_rezultz_et_backupz/oldcode_backupz/backup_dec12/: opengl_utilityz.cpp
source/: render_objk_cmd.hpp  scene_CMDer.hpp
source/MCP_cmd/: engine.hpp  feedback_sym.cpp  feedback_sym.hpp  feedback_sym_CMD.cpp  mcp_lib.hpp  shader_pipeline_CMD.cpp  shader_pipeline_CMD.hpp  viewport_CMDerz.hpp  écouterions_resourcer_CMD.hpp  écouteur_resourcer_CMD.hpp
source/animation/: animated_mesh.cpp  animation.hpp  assimp_scene_loader.cpp  assimp_scene_loader.hpp  joint.hpp  readME.md  skeleton.hpp  sym_object.hpp  sym_object_anim.hpp
source/basez/: gl_lib_z.hpp  lenz.hpp  mathII.hpp  opengl_utilityz.cpp  opengl_utilityz.hpp  parserlib.hpp  rez_utility_lib.hpp  shader_parser.cpp  shader_parser.hpp  shader_pipeline_CMD.cpp  shader_pipeline_CMD.hpp  sym_object.hpp  texture.hpp  texture_parser.cpp  texture_parser.hpp
source/basez/parserz/: parse_table_ref.h  parserlib.cpp  parserlib.hpp  shader_parser.cpp  shader_parser.hpp  texture_parser.cpp  texture_parser.hpp
source/basez/shaderglsl/: comput_expanse_BASE_B.glsl  file_list_shader.xml  file_list_shader_anima.xml  frag_elmt_BASE_A.glsl
source/data_extrn/: DEFUL_file_list_texture.xml  file_list_texture.xml
source/data_extrn/olddata/: bbaz.ply
source/g_animation/: animated_mesh.hpp  joint.cpp
source/geometry/: geometry_parser.hpp
source/media/: file_list_texture.xml
source/milieu/: a.out  partical_env.cpp  partical_env.hpp  test_envoz.cpp
source/milieu/binarz_collect/: sporatic_fire_light.out
source/modualz/g_animation/: a.out  joint.hpp
source/modualz/milieu/: test_envoz.cpp
source/modualz/text_render/: text_render.cpp
source/phyziz/: pysic_lib.hpp
source/shaderglsl/anim_base/: frag_anim_A.glsl
source/shaderglsl/base_D/: tess_ctrl_shader_baseD01.glsl
source/shaderglsl/exmplz/: frag_02testgen.glsl  sample_colorfractel_.glsl
source/ship_testz/: geometry.cpp  geometry.hpp  geometry_parser.hpp  main_shpr2_test.cpp  main_shpr3_test.cpp
source/ship_testz/shaderglsl/: frag_shader_lightB2.glsl  vertex_shader_BaseB01.glsl
source/text_render/: CMakeLists.txt  a.out  p_test.cpp  readME.md  text_render  text_render.cpp  text_render.hpp
source/ttests/: pasring_test.cpp
source/ttests/ship_testz/: main_shpr3_test.cpp  model_parser.hpp  readME.md  scene.hpp  scene_CMDer.hpp
test_rezultz/: twoshipz.out
test_rezultz/binary_backupz/: a2.out  graship.out
test_rezultz/oldcode_backupz/backup_dec12/: geometry_parser.hpp  gl_lib_z.hpp  spare_gematz.cpp
test_rezultz/oldcode_backupz/bacup_nov27/: geometry.hpp  render_objk_cmd.cpp
test_rezultz_et_backupz/: model_parser.hpp  readME.md
test_rezultz_et_backupz/binary_backupz/: a33.out  ship_orgtex.out
test_rezultz_et_backupz/oldcode_backupz/backup_dec12/: lenz.hpp  mathII.hpp
test_rezultz_et_backupz/oldcode_backupz/bacup_nov27/: geometry_parser.cpp  shader_parser.cpp
(+36 files in other folders)
